@@ -115,12 +115,13 @@ Show players from today = Zeige Spieler von Heute
 Show BOTs too = Zeige auch BOTs
 HideBots = Keine BOTS
 Default is to show only active players = Standard nur aktive Spieler
-All players inlcude inactive players. = Alle Spieler zeigt inaktive Spieler.
+All players include inactive players. = Alle Spieler zeigt inaktive Spieler.
 BOTs will show only if the are not ignored. = BOTs werden nur angezeigt wenn sie nicht ignoriert werden.
 
 Player Rankings = Spieler Statistiken
 Sections = Bereiche
 Clan Rankings = Clan Statistik
+Players timeline = Spielerverlauf
 Team Rankings = Team Statistik
 Role Rankings = Rollen Statistik
 Role Statistics = Rollen Statistik
