@@ -8,8 +8,10 @@ HLStats ChangeLog
 *) New: Player attacked Player events are now recorded.
 *) New: GoldenEye: Source gamesupport
 *) New: Left for dead 2 gamesupport
+*) New: Players timeline
 *) Update: L4D, Hidden and other gamesupport files.
-*) Update: Server addons list
+*) Update: Server add-ons list
+*) Update: some interface changes
 *) Fixed: timestamp option was not used correctly.
 *) Fixed: deleted lastUpdate column from player table. is now replaced with
 	skillchangeDate
